# evo-plugins-audio

./: .gitignore  Cargo.toml  Cross.toml  DEVELOPING.md  PRIVILEGES.yaml  README.md  SECRETS.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  continuous-dev.yml  manual-build.yml  promote.yml  promote_channel_pointer.py  publish-core-binaries.yml  publish-plugin-bundles.yml  publish.yml  secret-smoke.yml
ci/oob-sign-smoke/: manifest.toml
crates/evo-device-audio-distribution/: Cargo.toml
crates/evo-device-audio-distribution/src/: main.rs
crates/evo-device-audio-shared/: Cargo.toml
crates/evo-device-audio-shared/src/: audio_ui_pack.rs  lib.rs
crates/evo-plugins-audio-shared/: Cargo.toml
crates/evo-plugins-audio-shared/src/: lib.rs
keys/: commons-plugin-signing-public.meta.toml  commons-plugin-signing-public.pem
plugins/org.evoframework.artwork.local/: Cargo.toml  manifest.oop.toml  privileges.yaml
plugins/org.evoframework.artwork.local/src/: config.rs  embedded.rs  lib.rs  resolve.rs
plugins/org.evoframework.composition.alsa/: Cargo.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.composition.alsa/docs/: ALSA_PIPELINE_COMPOSE_V1.md  COMPOSITION_SELECT_MODE_V1.md
plugins/org.evoframework.composition.alsa/src/: byte_flow.rs  byte_flow_alsa.rs  lib.rs  test_support.rs
plugins/org.evoframework.delivery.alsa/: Cargo.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.delivery.alsa/src/: lib.rs
plugins/org.evoframework.metadata.local/: Cargo.toml  privileges.yaml
plugins/org.evoframework.metadata.local/docs/: METADATA_QUERY_V1.md
plugins/org.evoframework.metadata.local/src/: config.rs  lib.rs  query.rs
plugins/org.evoframework.multiroom.evo-native/: Cargo.toml  manifest.toml
plugins/org.evoframework.multiroom.evo-native/src/: device_card.rs  lib.rs
plugins/org.evoframework.network/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.network.nm/: Cargo.toml  manifest.oop.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.network.nm/docs/: CAPTIVE_PORTAL_WORKFLOW.md  NETWORK_NM.md  NETWORK_NM_REQUESTS_V1.md  NETWORK_NM_RUNBOOK.md  NOTICE_CODES.md
plugins/org.evoframework.network.nm/src/: adaptive_tick.rs  health.rs  lib.rs  nmcli_dispatch.rs  presets.rs  reconcile.rs  rfkill.rs  source.rs  supervisor.rs  wifi_phy.rs  wifi_radio.rs  wifi_roles.rs
plugins/org.evoframework.network/docs/: CAPTIVE_PORTAL_WORKFLOW.md  NETWORK.md  NETWORK_REQUESTS_V1.md  NETWORK_RUNBOOK.md
plugins/org.evoframework.network/src/: connectivity_subject.rs  lib.rs  nmcli_dispatch.rs  presets.rs  source.rs  supervisor.rs  wifi_phy.rs
plugins/org.evoframework.network/src/source/: nm.rs  polling.rs  rtnetlink.rs
plugins/org.evoframework.playback.mpd/: Cargo.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.playback.mpd/src/: config.rs  lib.rs  mpd.rs  mpd_fragment.rs  mpd_restart.rs  playback_supervisor.rs  test_support_routing.rs
plugins/org.evoframework.playback.mpd/src/mpd/: connection.rs  endpoint.rs  error.rs  framing.rs  protocol.rs  types.rs
plugins/org.evoframework.playback.mpd/src/playback_supervisor/: actor.rs  command.rs  report.rs  subject_emitter.rs  test_mock.rs
plugins/org.evoframework.playback.options/: Cargo.toml  manifest.toml  privileges.yaml
plugins/org.evoframework.playback.options/src/: lib.rs
scripts/: cross-build.sh
