[workspace]
resolver = "2"
members = [
    "crates/evo-device-audio-shared",
    "plugins/org.evoframework.playback.mpd",
    "plugins/org.evoframework.metadata.local",
    "plugins/org.evoframework.artwork.local",
    "plugins/org.evoframework.composition.alsa",
]

# Each plugin crate lives under plugins/<full.dotted.name>/ matching
# its manifest plugin name. New plugins are added to the members
# array in the same commit that introduces them. Workspace-internal
# shared utilities live under crates/.

[workspace.package]
version = "0.1.0"
edition = "2021"
# Match evo-core MSRV (see foonerd/evo-core docs/engineering/MSRV.md).
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-device-audio"

# Single pin for the evo framework. Every plugin crate consumes the
# SDK via `evo-plugin-sdk = { workspace = true }` so there is exactly
# one place to bump the version. Pin is intentional; do not track
# evo-core main silently. Upgrade procedure is in DEVELOPING.md.
#
# Non-framework dependencies are pinned here too so plugin crates
# cannot drift independently. Feature sets are the superset needed
# across the plugin population; individual crates pay only for what
# they actually import.
#
# evo-core 0.1.10 is in flight on the `eng-excel` branch. The pin
# below uses an explicit rev to track a known-good commit (SDK
# `run_oop` helper, host plugin signing flow). Bump to `tag = "v0.1.10"`
# once that tag is cut on evo-core; until then the rev pin keeps
# reproducible builds.
[workspace.dependencies]
evo-plugin-sdk = { git = "https://github.com/foonerd/evo-core.git", rev = "763b2a41ccd617b2a47a78e334f2ab465327975b" }
evo-device-audio-shared = { path = "crates/evo-device-audio-shared", version = "0.1.0" }
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"

# Mirrors evo-core's workspace lints. No unsafe; all public items
# documented.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

# The SDK trait contract uses
#   fn foo() -> impl Future<Output = T> + Send + '_
# rather than `async fn foo() -> T` because trait-position async fn
# does not carry Send bounds on the returned future, which breaks
# the steward's tokio multi-threaded dispatch. Clippy's
# manual_async_fn suggests an incompatible rewrite; allow at
# workspace level.
[workspace.lints.clippy]
manual_async_fn = "allow"
