[workspace]
resolver = "2"
members = [
    "crates/evo-device-audio-shared",
    "plugins/org.evoframework.playback.mpd",
    "plugins/org.evoframework.metadata.local",
    "plugins/org.evoframework.artwork.local",
    "plugins/org.evoframework.composition.alsa",
    "plugins/org.evoframework.network.nm",
]

# Each plugin crate lives under plugins/<full.dotted.name>/ matching
# its manifest plugin name. New plugins are added to the members
# array in the same commit that introduces them. Workspace-internal
# shared utilities live under crates/.

[workspace.package]
version = "0.1.0"
edition = "2021"
# Match evo-core MSRV (see foonerd/evo-core docs/engineering/MSRV.md).
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/foonerd/evo-device-audio"

# Single pin for the evo framework. Every plugin crate consumes the
# SDK via `evo-plugin-sdk = { workspace = true }` so there is exactly
# one place to bump the version. Pin is intentional; do not track
# evo-core main silently. Upgrade procedure is in DEVELOPING.md.
#
# Non-framework dependencies are pinned here too so plugin crates
# cannot drift independently. Feature sets are the superset needed
# across the plugin population; individual crates pay only for what
# they actually import.
#
# Pinned at evo-core's 0.1.11-rc.1 release. Adds the durability
# triad — admin / custody / relation-graph SQLite write-through with
# boot rehydrate — on top of the 0.1.10 surface. The plugin SDK is
# unchanged at the API level; this bump moves consumers onto a
# steward whose state survives restart so device behaviour does not
# rely on an in-memory-only fabric.
[workspace.dependencies]
evo-plugin-sdk = { git = "https://github.com/foonerd/evo-core.git", tag = "v0.1.11-rc.1" }
evo-device-audio-shared = { path = "crates/evo-device-audio-shared", version = "0.1.0" }
semver = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time", "io-util", "sync"] }
tracing = "0.1"
thiserror = "1"
anyhow = "1"
lofty = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
base64 = "0.22"
chacha20poly1305 = "0.10"
getrandom = "0.3"
sha2 = "0.10"

# Mirrors evo-core's workspace lints. No unsafe; all public items
# documented.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

# The SDK trait contract uses
#   fn foo() -> impl Future<Output = T> + Send + '_
# rather than `async fn foo() -> T` because trait-position async fn
# does not carry Send bounds on the returned future, which breaks
# the steward's tokio multi-threaded dispatch. Clippy's
# manual_async_fn suggests an incompatible rewrite; allow at
# workspace level.
[workspace.lints.clippy]
manual_async_fn = "allow"
