[package]
name = "org-evoframework-artwork-local"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local album-artwork respondent for the evo audio domain. Stocks the artwork.providers shelf."

[lib]
path = "src/lib.rs"

# Out-of-process wire binary — the production-shaped OOP entrypoint
# the framework's release plane cross-builds, signs, packs, and
# publishes as a v0.1.10 plugin bundle. The companion in-process
# admission path uses the lib crate directly.
[[bin]]
name = "artwork-local-wire"
path = "src/bin/artwork-local-wire.rs"

[dependencies]
anyhow = { workspace = true }
evo-plugin-sdk = { workspace = true }
evo-device-audio-shared = { workspace = true }
lofty = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
