[package]
name = "org-evoframework-composition-alsa"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ALSA composition stage for the evo audio data plane. Drives the framework-configured CompositionEndpoints, declares typed mode list, reacts to topology rewires. Stocks the audio.composition shelf at shape 2."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
