[package]
name = "org-evoframework-composition-alsa"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ALSA composition stage for the evo audio data plane. Drives the framework-configured CompositionEndpoints, declares typed mode list, reacts to topology rewires. Stocks the audio.composition shelf at shape 2."

[lib]
path = "src/lib.rs"

# Cargo features.
#
# `alsa-substrate` (off by default) pulls in the `alsa` crate
# and enables the AlsaPcm byte-flow path. Off-by-default keeps
# the host x86_64 dev-box build hermetic — no libasound link
# on the rig, no system dev-bundle dependency. Cross-builds
# for the target hardware (reference target = aarch64-unknown-linux-gnu)
# enable the feature explicitly:
#
#     cross build --release --features alsa-substrate \
#         --target aarch64-unknown-linux-gnu \
#         -p org-evoframework-composition-alsa
#
# The Cross.toml at the workspace root pre-installs
# libasound2-dev:arm64 inside the cross container so the
# alsa crate's libasound link resolves against the same
# libasound version the target ships. NamedPipe substrate
# remains available regardless of feature state; the feature
# only adds the AlsaPcm arm.
[features]
default = []
alsa-substrate = ["dep:alsa", "dep:nix"]

[dependencies]
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Structured byte-flow error variants returned from the
# substrate workers, surfaced to the operator-readable
# worker status channel.
thiserror = { workspace = true }
# `tokio::sync::watch`, `Notify`, async file I/O for the
# substrate worker, and `tokio::spawn` for the route-change
# reactor + byte-flow worker tasks.
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
# Optional: ALSA PCM substrate. Linked only when the
# `alsa-substrate` feature is on — see [features] above.
alsa = { version = "0.10", optional = true }
# Optional: needed to inspect ALSA error errno values
# (alsa::Error::errno() returns nix::errno::Errno). Pulled in
# only when alsa-substrate is enabled. nix also appears in
# [dev-dependencies] for the FIFO test fixtures; the regular
# dep here is independent and feature-gated.
nix = { version = "0.30", default-features = false, features = ["fs"], optional = true }

[dev-dependencies]
# Unique tempdir per test for FIFO endpoint paths. Hermetic;
# no test fixture lingers across runs.
tempfile = { workspace = true }
# `nix::unistd::mkfifo` is the only Unix syscall the test
# fixtures need; pulling in `nix` rather than rolling
# `unsafe { libc::mkfifo }` keeps `#![forbid(unsafe_code)]`
# on the plugin's source intact.
nix = { version = "0.30", default-features = false, features = ["fs"] }

[lints]
workspace = true
