[package]
name = "org-evoframework-metadata-local"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local file-tag metadata respondent for the evo audio domain. Stocks the metadata.providers shelf."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
evo-device-audio-shared = { workspace = true }
lofty = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
