[package]
name = "org-evoframework-multiroom-evo-native"
# Keep in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "evo-native multi-room audio-frame fan-out plugin. Bridges the local audio chain to the framework's audio-plane TCP transport: captures from the source-host's mpd output and fans audio frames to multi-room receivers; subscribes to incoming audio frames and renders to the local ALSA delivery chain on receivers. Stocks the audio.multiroom shelf at shape 1."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
toml = "0.8"
tracing = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
