[package]
name = "org-evoframework-network-nm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NetworkManager-based network plugin for the evo framework. Stocks the networking.link shelf."

[lib]
path = "src/lib.rs"

[[bin]]
name = "network-nm-wire"
path = "src/bin/network-nm-wire.rs"

[dependencies]
anyhow = { workspace = true }
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
