[package]
name = "org-evoframework-network-nm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NetworkManager-based network plugin for the evo framework. Stocks the networking.link shelf."

[lib]
path = "src/lib.rs"

[[bin]]
name = "network-nm-wire"
path = "src/bin/network-nm-wire.rs"

[features]
# Polling source is always compiled — universal correctness floor.
default = ["source-rtnetlink", "source-nm"]
# Linux kernel netlink subscriber. Observes layer-2 carrier state
# and layer-3 address attach / detach via RTMGRP_LINK +
# RTMGRP_IPV4_IFADDR + RTMGRP_IPV6_IFADDR. Linux-only; cfg-gated
# at the module level so non-Linux builds of the plugin compile
# without the dependency.
source-rtnetlink = [
    "dep:rtnetlink",
    "dep:netlink-packet-route",
    "dep:netlink-packet-core",
    "dep:netlink-proto",
    "dep:netlink-sys",
    "dep:futures",
]
# NetworkManager D-Bus subscriber. Observes the NM
# `Connectivity` property + per-device `StateChanged` signals
# via `org.freedesktop.NetworkManager` on the system bus.
# Linux-only; the source's module is cfg-gated alongside
# the dependency tree.
source-nm = [
    "dep:zbus",
    "dep:futures",
]

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tokio = { workspace = true, features = ["process", "fs"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }
sha2 = { workspace = true }

# Rtnetlink event source (Linux only, feature-gated).
rtnetlink = { version = "0.14", optional = true }
netlink-packet-route = { version = "0.19", optional = true }
netlink-packet-core = { version = "0.7", optional = true }
netlink-proto = { version = "0.11", optional = true }
netlink-sys = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }

# NetworkManager D-Bus subscriber. Pure-Rust async D-Bus
# client; the system-bus connection backs `org.freedesktop
# .NetworkManager` PropertiesChanged + Device.StateChanged
# subscriptions.
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }

[lints]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
