[package]
name = "org-evoframework-playback-mpd"
# Kept in sync with manifest.toml [plugin].version and PluginIdentity in describe().
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "MPD playback warden for the evo audio domain. Stocks the audio.playback shelf."

[lib]
path = "src/lib.rs"

[dependencies]
evo-plugin-sdk = { workspace = true }
semver = { workspace = true }
# Plugin-local tokio features: workspace baseline plus `fs`
# (atomic-write of the MPD audio_output fragment under
# /etc/evo/mpd.conf) and `process` (invocation of
# `sudo -n systemctl restart mpd` from the route-change
# fragment-writer worker). Both are MPD-specific surfaces that
# do not belong on the workspace baseline.
tokio = { workspace = true, features = ["fs", "process"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# Source-verb request/response payload encoding. play_now and the
# rest of the source-verb surface ship typed payloads as UTF-8 JSON
# (per the audio.playback shape contract).
serde = { workspace = true }
serde_json = { workspace = true }
# Plugin-local: used to parse `LoadContext::config` in `src/config.rs`.
# Matches the version the SDK carries transitively; direct declaration is
# required to name `toml::Table` as a type in this crate. Not a workspace
# dep because not every future plugin will want a configuration file.
toml = "0.8"

[dev-dependencies]
# Extra tokio features only needed by tests (duplex streams, test-util utilities).
tokio = { workspace = true, features = ["test-util"] }
# Test-mock impls of `SubjectAnnouncer::update_state` need `serde_json::Value`.
# Production code does not handle JSON state directly; only the capturing /
# null mocks under `#[cfg(test)]` reference the type.
serde_json = { workspace = true }
# Unique tempdir per F3 fragment-writer test so the atomic-
# write tests do not collide on a shared path. Hermetic; no
# fixture lingers across runs.
tempfile = { workspace = true }

[lints]
workspace = true
